--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "nodemailer": "^4.7.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
